Issue #22023: Fix %S, %R and %V formats of PyUnicode_FromFormat().